[gd_scene load_steps=7 format=3 uid="uid://dsiwkiyfene0n"]

[ext_resource type="Texture2D" uid="uid://djcjph7gppvhg" path="res://images/Top Down Soldier.png" id="1_1ayey"]
[ext_resource type="Script" path="res://shop.gd" id="1_s3h3x"]
[ext_resource type="Texture2D" uid="uid://cvjagvxoc1ojw" path="res://images/Birds eye Hammer Knight.png" id="2_n8guy"]
[ext_resource type="Texture2D" uid="uid://83lpy31md2v1" path="res://images/Coin.png" id="2_uwnfq"]
[ext_resource type="Texture2D" uid="uid://da2q1nd8bijhd" path="res://images/Birds eye Arrow Caster.png" id="3_3jmny"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hb7gj"]
bg_color = Color(0.328128, 0.355862, 0.342752, 1)
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_color = Color(0, 0, 0, 1)

[node name="Shop" type="Node2D"]
script = ExtResource("1_s3h3x")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Panel" type="Panel" parent="CanvasLayer"]
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -325.0
offset_right = 1152.0
theme_override_styles/panel = SubResource("StyleBoxFlat_hb7gj")

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/Panel"]
layout_mode = 0
offset_right = 1152.0
offset_bottom = 325.0
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 50

[node name="GridContainer" type="GridContainer" parent="CanvasLayer/Panel/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/h_separation = 10
theme_override_constants/v_separation = 10
columns = 3

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/Panel/MarginContainer/GridContainer"]
layout_mode = 2
texture = ExtResource("2_uwnfq")
stretch_mode = 4

[node name="MoneyLabel" type="Label" parent="CanvasLayer/Panel/MarginContainer/GridContainer/TextureRect"]
layout_mode = 0
offset_left = -24.0
offset_top = 5.0
offset_right = 16.0
offset_bottom = 28.0

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/Panel/MarginContainer/GridContainer"]
layout_mode = 2

[node name="Soldier" type="VBoxContainer" parent="CanvasLayer/Panel/MarginContainer/GridContainer/HBoxContainer"]
layout_mode = 2

[node name="Soldierbuy" type="Button" parent="CanvasLayer/Panel/MarginContainer/GridContainer/HBoxContainer/Soldier"]
layout_mode = 2
theme_override_font_sizes/font_size = 26
text = "Soldier - $10"

[node name="Label" type="Label" parent="CanvasLayer/Panel/MarginContainer/GridContainer/HBoxContainer/Soldier"]
layout_mode = 2
text = "Health: 5 | Speed: 400 | Damage: 3"

[node name="Control" type="MarginContainer" parent="CanvasLayer/Panel/MarginContainer/GridContainer/HBoxContainer/Soldier"]
custom_minimum_size = Vector2(128, 128)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/Panel/MarginContainer/GridContainer/HBoxContainer/Soldier/Control"]
layout_mode = 2
texture = ExtResource("1_1ayey")

[node name="Hammer Knight" type="VBoxContainer" parent="CanvasLayer/Panel/MarginContainer/GridContainer/HBoxContainer"]
layout_mode = 2

[node name="HammerKbuy" type="Button" parent="CanvasLayer/Panel/MarginContainer/GridContainer/HBoxContainer/Hammer Knight"]
layout_mode = 2
theme_override_font_sizes/font_size = 26
text = "Hammer Knight - $15"
autowrap_mode = 3

[node name="Label" type="Label" parent="CanvasLayer/Panel/MarginContainer/GridContainer/HBoxContainer/Hammer Knight"]
layout_mode = 2
text = "Health: 10 | Speed: 200 | Damage: 4"

[node name="Control" type="MarginContainer" parent="CanvasLayer/Panel/MarginContainer/GridContainer/HBoxContainer/Hammer Knight"]
custom_minimum_size = Vector2(128, 128)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/Panel/MarginContainer/GridContainer/HBoxContainer/Hammer Knight/Control"]
layout_mode = 2
texture = ExtResource("2_n8guy")

[node name="Arrow Caster" type="VBoxContainer" parent="CanvasLayer/Panel/MarginContainer/GridContainer/HBoxContainer"]
layout_mode = 2

[node name="ArrowCbuy" type="Button" parent="CanvasLayer/Panel/MarginContainer/GridContainer/HBoxContainer/Arrow Caster"]
layout_mode = 2
theme_override_font_sizes/font_size = 26
text = "Arrow Caster - $20"
autowrap_mode = 3

[node name="Label" type="Label" parent="CanvasLayer/Panel/MarginContainer/GridContainer/HBoxContainer/Arrow Caster"]
layout_mode = 2
text = "Health: 3 | Speed: 300 | Damage: 1"

[node name="Control" type="MarginContainer" parent="CanvasLayer/Panel/MarginContainer/GridContainer/HBoxContainer/Arrow Caster"]
custom_minimum_size = Vector2(128, 128)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/Panel/MarginContainer/GridContainer/HBoxContainer/Arrow Caster/Control"]
layout_mode = 2
texture = ExtResource("3_3jmny")

[node name="HBoxContainer2" type="HBoxContainer" parent="CanvasLayer/Panel/MarginContainer/GridContainer"]
layout_mode = 2

[connection signal="pressed" from="CanvasLayer/Panel/MarginContainer/GridContainer/HBoxContainer/Soldier/Soldierbuy" to="." method="_on_soldierbuy_pressed"]
[connection signal="pressed" from="CanvasLayer/Panel/MarginContainer/GridContainer/HBoxContainer/Hammer Knight/HammerKbuy" to="." method="_on_hammer_kbuy_pressed"]
[connection signal="pressed" from="CanvasLayer/Panel/MarginContainer/GridContainer/HBoxContainer/Arrow Caster/ArrowCbuy" to="." method="_on_arrow_cbuy_pressed"]
